<resources>
    <string name="google_maps_key">AIzaSyAwRfuPEhmSsjGxT-kB57Yr4yeqKX5xr7Y</string>
    <string name="google_map_api_key">AIzaSyAwRfuPEhmSsjGxT-kB57Yr4yeqKX5xr7Y</string>
    <string name="app_name">InLocalRestaurantApp</string>
    <string name="table">Table</string>
    <string name="taged_photos">Tagged Photos</string>
    <string name="login_title">Get more out of your Business and delight your customers.</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_your_registered_phone_number">Enter your registered email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_record_found_home">Here you will see the posts of your followed Restaurant and Friends</string>
    <string name="empty_field">Field is empty</string>
    <string name="error_email_empty">Please Enter Email Address.</string>
    <string name="error_rest_name">Please Enter Restaurunt Name.</string>
    <string name="error_item_name">Please Enter Item Name.</string>
    <string name="error_item_file">Please Select Item Image.</string>
    <string name="select_categories_first">Select category first.</string>
    <string name="select_menu_image_file">Select menu image.</string>
    <string name="error_price">Please Enter Valid Price.</string>
    <string name="error_desc">Please Enter Describtion.</string>
    <string name="error_phone_empty">Please Enter Phone Number.</string>
    <string name="error_password_empty">Please Enter Password.</string>
    <string name="error_email_invalid">Please Valid Email Address.</string>
    <string name="error_phone_invalid">Please Valid Phone Number.</string>
    <string name="str_enter_old_psw">Please Enter Old Password.</string>
    <string name="str_enter_new_psw">Please Enter New Password.</string>
    <string name="str_enter_cnf_psw">Please Enter Confirm Password.</string>
    <string name="str_both_psw_not_matched">New Password and Confirm Password Does Not Matched.</string>
    <string name="error_password_invalid">Please Enter Password At Least 6 Characters Long.</string>
    <string name="str_internet_not_connected">Please check your internet connection.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_list">Menu List</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_new_category_cap">Add New Category</string>
    <string name="update_category">Update Category</string>
    <string name="update">Update</string>
    <string name="add_new_item">Add new item</string>
    <string name="order_listing">Order History</string>
    <string name="booking_id">Booking Id :</string>
    <string name="order_type">Order Type :</string>
    <string name="tips">Tips :</string>
    <string name="comment">Comment</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="profile_info">Profile Info</string>
    <string name="my_orders">My Orders</string>
    <string name="saved_posts_favourites">Saved Posts/Favourites</string>
    <string name="change_password">Change Password</string>
    <string name="summary_amp_statistics"><![CDATA[Summary & Statistics]]></string>
    <string name="notifications_settings">Notification Settings</string>
    <string name="logout">Logout</string>
    <string name="Reported">Reported</string>
    <string name="post_deleted">Post deleted</string>
    <string name="User_Blocked">User Blocked</string>
    <string name="are_you_sure_you_want_to_logout">Arey you sure you want to logout</string>
    <string name="save">Save</string>
    <string name="choose_menu_category">Choose Menu Category</string>
    <string name="starter">Starter</string>
    <string name="add_category_name">Add category name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_of_guests">No. of guests :</string>
    <string name="notes">Notes :</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="in_progress">InProgress</string>
    <string name="Cancel">Cancel</string>
    <string name="your_booking">Your Booking</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="restaurutn_dine_in">Restaurant Dine IN</string>
    <string name="Delivery">Delivery</string>
    <string name="store_pickup">Store Pickup</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="customization">Customization :</string>
    <string name="total_ordered_times">Total Ordered times :</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="dine_in">Dine In</string>
    <string name="users">Users:</string>
    <string name="order_id">Order ID :</string>
    <string name="cancel">Cancel</string>
    <string name="send_the_reason">Send the reason</string>
    <string name="please_write_reason_for_rejection">Please write the reason for rejection</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="unfollow">Unfollow</string>
    <string name="menu">Menu</string>
    <string name="reservation">Reservation</string>
    <string name="info">Info</string>
    <string name="add_caption">Add Caption</string>
    <string name="share_as_a_post">Share as a Post</string>
    <string name="follow">Follow</string>
    <string name="restaurant_post">Restaurant Post</string>
    <string name="user_s_post">User\'s Post</string>
    <string name="restaurant_phone_number">Restaurant phone number</string>
    <string name="restaurant_email_address">Restaurant email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="category">Category</string>
    <string name="availability">Availability</string>
    <string name="serving_sizes_you_offer">Serving sizes you offer</string>
    <string name="add_time">Add Time</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="indian">Indian</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_item">Add Item</string>
    <string name="enter_menu_name">Enter Menu Name</string>
    <string name="please_select_menu">Please select menu</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="select_your_category">Select your category</string>
    <string name="enter_description">Enter description</string>
    <string name="select_menu">Select Menu</string>
    <string name="delivery">Delivery</string>
    <string name="eat_inside">Eat Inside</string>
    <string name="add_another">Add Another</string>
    <string name="add_custom">Add Custom</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_price">Please Enter Price</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="monday">Monday</string>
    <string name="tueday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="description">Description</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="delivery_note">Delivery Note</string>
    <string name="posts">Posts</string>
    <string name="insight">Insight</string>
    <string name="block">Block</string>
    <string name="email">Email</string>
    <string name="report">Report</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="no_record_available">No record available.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_item">Update Item</string>
    <string name="share">Share</string>
    <string name="view_story">View Story</string>
    <string name="enter_menu_description">Enter menu description</string>
    <string name="tag_unselected">unselected</string>
    <string name="upload_story">Upload Story</string>
    <string name="tag_restaurants">Tag Restaurants</string>
    <string name="select_opening_time_first">Select opening time first</string>
    <string name="closing_time_greater_than_opening_time">Closing time must be greater than opening time</string>
    <string name="select_time">Select Time</string>
    <string name="Photos">Photos</string>
    <string name="Stories">Stories</string>
    <string name="Comments">Comments</string>
    <string name="Followers">Followers</string>
    <string name="Likes">Likes</string>
    <string name="Order">Order</string>
    <string name="Booking">Booking</string>
    <string name="Payment">Payment</string>
    <string name="notification_settings">Notifications Settings</string>
    <string name="Best_Seller">Best Seller</string>
    <string name="today">Today</string>
    <string name="total_sales">Total Sales</string>
    <string name="Table_Reservation">Table Reservation</string>
    <string name="addres_line_one">Address Line One</string>
    <string name="addres_line_two">Address Line Two</string>
    <string name="Total_Accepted">Total Accepted</string>
    <string name="Total_Cancelled">Total Cancelled</string>
    <string name="Total_Orders">Total Orders</string>
    <string name="Order_Statistics">Order Statistics</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="all_time">All Time</string>
    <string name="today_summery">Today\'s Summary</string>
    <string name="Sales_Statistics">Sales Statistics</string>
    <string name="this_week_summery">This Week\'s Summary</string>
    <string name="this_month_summery">This Month\'s Summary</string>
    <string name="all_time_summery">All Time\'s Summary</string>
    <string name="today_sales">Today\'s Sales</string>
    <string name="this_week_Sales">This Week\'s Sales</string>
    <string name="this_month_Sales">This Month\'s Sales</string>
    <string name="all_time_Sales">All Time\'s Sales</string>
    <string name="today_orders">Today\'s Orders</string>
    <string name="this_week_Orders">This Week\'s Orders</string>
    <string name="this_month_Orders">This Month\'s Orders</string>
    <string name="all_time_Orders">All Time\'s Orders</string>
    <string name="today_accepted">Today\'s Accepted</string>
    <string name="this_week_accepted">This Week\'s Accepted</string>
    <string name="this_month_accepted">This Month\'s Accepted</string>
    <string name="all_time_accepted">All Time\'s Accepted</string>
    <string name="today_cancelled">Today\'s Cancelled</string>
    <string name="this_week_cancelled">This week\'s Cancelled</string>
    <string name="this_month_cancelled">This month\'s Cancelled</string>
    <string name="all_time_cancelled">All Time\'s Cancelled</string>
    <string name="str_session_expired">Session Expired</string>
</resources>