<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_for_bottom_dialog"
        android:orientation="vertical">

        <com.inlocal.restaurantapp.custom.PoppinsRegularTextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#50000000" />

        <com.inlocal.restaurantapp.custom.PoppinsRegularTextView
            android:id="@+id/txtYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#50000000" />

        <com.inlocal.restaurantapp.custom.PoppinsRegularTextView
            android:id="@+id/txtNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/no"
            android:textColor="@color/red"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>
</layout>