<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_corner_radius_button"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_20sdp">

            <com.inlocal.restaurantapp.custom.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/please_enter_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <com.inlocal.restaurantapp.custom.PoppinsRegularEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_reason_editbox"
                android:inputType="textCapSentences"
                android:padding="@dimen/_10sdp"

                android:paddingVertical="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:scrollbars="vertical"
                android:gravity="start"
                android:minLines="5"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <com.inlocal.restaurantapp.custom.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/tvEtPrice"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/please_enter_price"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="@dimen/_10ssp" />

            <com.inlocal.restaurantapp.custom.PoppinsRegularEditText
                android:id="@+id/edtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_reason_editbox"
                android:inputType="numberDecimal"
                android:padding="@dimen/_10sdp"
                android:paddingVertical="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:visibility="gone"
                android:gravity="start"
                android:minLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.inlocal.restaurantapp.custom.PoppinsRegularButton
                    android:id="@+id/btnYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_assigned_bg"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


                <com.inlocal.restaurantapp.custom.PoppinsRegularButton
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_selector"
                    android:gravity="center"
                    android:text="@string/add_item"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>